removed ejs from add/update

--- a/views/controlDate.ejs
+++ b/views/controlDate.ejs
@@ -75,7 +75,7 @@
                         Delphi
                     </td>
                     <td>
-                        <input id="delphi" type="text" value=">
+                        <input id="delphi" type="text" value="">
                     </td>
                 </tr>
                 <tr>
