done with assignment -ac

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,8 +12,8 @@
     <link rel="shortcut icon" href="favicon.ico" />
     <%- include('common/header'); %>
         <h1>Home Page</h1>
-        <p>Data is licenced under 'Most Popular Programming Languages Since 2004' By Muhammad Khalid @Kaggle using a: <a href="https://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 Licence</a> </p>
-        <p>Data is licenced under PYPL PopularitY of Progamming Languages under a:  <a href="http://creativecommons.org/licenses/by/3.0/">Creative Commons Attribution 3.0 Unported License</a></p>
+        <p>Data is licenced under 'Most Popular Programming Languages Since 2004' By Muhammad Khalid <a href="https://www.kaggle.com/muhammadkhalid/most-popular-programming-languages-since-2004">@Kaggle</a> using a: <a href="https://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 Licence</a> </p>
+        <p>Data is licenced under <a href="https://pypl.github.io/PYPL.html">PYPL PopularitY of Progamming Languages</a> under a:  <a href="http://creativecommons.org/licenses/by/3.0/">Creative Commons Attribution 3.0 Unported License</a></p>
 </body>
 
 </html>
